--- a/views/index.html
+++ b/views/index.html
@@ -68,10 +68,10 @@
 
 		<div class="footer-right">
 					<p> Follow Us </p>
-					<a href="#" target="_blank"><i class="zmdi zmdi-facebook-box"></i></a>
-					<a href="#" target="_blank"><i class="zmdi zmdi-linkedin-box"></i></a>
-					<a href="#" target="_blank"><i class="zmdi zmdi-twitter-box"></i></a>
-					<a href="#" target="_blank"><i class="zmdi zmdi-github-box"></i></a>
+					<a href="https://www.facebook.com/search/top/?q=%23webdevelopers" target="_blank"><i class="zmdi zmdi-facebook-box"></i></a>
+					<a href="https://www.linkedin.com/company/coder-camps?trk=company_logo" target="_blank"><i class="zmdi zmdi-linkedin-box"></i></a>
+					<a href="https://twitter.com/WebDeveloperr?lang=en" target="_blank"><i class="zmdi zmdi-twitter-box"></i></a>
+					<a href="https://github.com/devnetcc/Coder-Net" target="_blank"><i class="zmdi zmdi-github-box"></i></a>
 				</div>
 
 
