styled profile page

--- a/public/views/editProfile.html
+++ b/public/views/editProfile.html
@@ -60,6 +60,10 @@
         <label> Where You're At  </label>
         <input  ng-model="vm.profile.userAt"></input>
       </md-input-container>
+      <md-input-container >
+        <label> Where You're Going?  </label>
+        <input  ng-model="vm.profile.userGoing"></input>
+      </md-input-container>
 
       <div layout="row" ng-repeat="a in vm.profile.languages" style="padding-left:6px;">
         <md-input-container >
