--- a/views/index.html
+++ b/views/index.html
@@ -55,6 +55,8 @@
 		<section layout layout-align="end end">
 
 			<md-button ui-sref="Profile({id: nav.status._id})" ng-show='nav.status.email;'> Welcome {{nav.status.name}} </md-button>
+				<md-button ui-sref="MessageCenter({id: nav.status._id})">My Messages</md-button>
+				<md-button ng-show='nav.status.email;'  ng-click = "nav.goToEdit(nav.status._id, vm.person)"> Edit Profile </md-button>
 			<md-button type='button' ng-click='nav.logout()' ng-show='nav.status.email;'> Logout </md-button>
 			<md-button type='button' ui-sref='RegLog' ng-show='!nav.status.email;'> Login/Register </md-button>
 		</section>
