--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/0.11.4/angular-material.css">
 	<link href='https://fonts.googleapis.com/css?family=Quicksand:700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
-	<link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=entypo">
-	<link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css'>
-	<link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css'>
+	<link rel="stylesheet" href="https://weloveiconfonts.com/api/?family=entypo">
+	<link rel='stylesheet prefetch' href='https://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css'>
+	<link rel='stylesheet prefetch' href='https://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css'>
 	<link rel="stylesheet" type="text/css" href="/css/speech-input.css">
 	<link rel="stylesheet" href="/angular-ui-notification/dist/angular-ui-notification.min.css">
 	<!-- <link rel="stylesheet" href="/angular-chart.js/dist/angular-chart.css"> -->
@@ -103,7 +103,7 @@
 	<script src="/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
 	<script type="text/javascript" src="/angular-ui-tinymce/src/tinymce.js"></script>
 	<script src="angular-socialshare/src/js/angular-socialshare.js"></script>
-	<script src="angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-sanitize.js"></script>
 
 
