--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/0.11.4/angular-material.css">
 	<link href='https://fonts.googleapis.com/css?family=Quicksand:700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
-	<link rel="stylesheet" href="https://weloveiconfonts.com/api/?family=entypo">
+	<link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=entypo">
 	<link rel='stylesheet prefetch' href='https://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css'>
 	<link rel='stylesheet prefetch' href='https://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css'>
 	<link rel="stylesheet" type="text/css" href="/css/speech-input.css">
@@ -120,7 +120,7 @@
 	<script src="/javascript/services/UserFactory.js"></script>
 	<script src="/javascript/services/ProfileFactory.js"></script>
 	<script src="/javascript/services/ForumFactory.js"></script>
-	<script src="/javascript/services/AuthInterceptor.js"></script>
+	<script src="/javascript/services/Authinterceptor.js"></script>
 	<!-- Controllers -->
 	<script src="/javascript/controllers/HomeController.js"></script>
 	<script src="/javascript/controllers/PassResetController.js"></script>
