--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -115,7 +115,7 @@
                   <img src="{{c.avi}}" class="avatar" />
                   <div id="hover-content" flex="15">
                     <div layout="column">
-                    <md-button class="zmdi zmdi-plus-circle-o small-btn" ng-click="vm.followOnPost(p);" aria-label="follow"> </md-button>
+                    <md-button class="zmdi zmdi-plus-circle-o small-btn" ng-click="vm.followOnProfile();" aria-label="follow"> </md-button>
                     <md-button class="zmdi zmdi-minus-circle-outline small-btn" ng-click="vm.unfollowOnPost(p);" aria-label="unfollow"> </md-button>
                     <md-button class="zmdi zmdi-email small-btn" ui-sref="Message({id: c.creatorId})"></md-button>
                   </div>
@@ -139,18 +139,6 @@
             </div>
           </div>
           </div>
-<!-- <md-container >
-  <md-list>
-    <md-list-item ng-repeat='p in vm.profilePosts | orderBy:"-date"'>
-      <div class='md-list-item-text' style='padding:10px; padding-left:30px;margin-left:225px; margin-top:30px;'>
-        <h3> Title: {{p.title}}</h3>
-        <h5> Content: {{p.body}}</h5>
-        <h6> Posted On: {{p.date}}</h6>
-        <h6> Posted in: <a ng-repeat="t in p.tags" ui-sref="Tag({tag: t})">{{t}},</a></h6>
-        <md-button class="zmdi zmdi-thumb-down" ng-hide='showEdit' ng-click="vm.downvote(p)" aria-label="down"> </md-button>
-        <md-button class="zmdi zmdi-thumb-up" ng-hide='showEdit' ng-click="vm.upvote(p)" aria-label="up"> </md-button>
-        <md-button class="zmdi zmdi-edit" ng-hide='showEdit' ng-click='showEdit = true; vm.startEdit(p);'> Edit </md-button>
-        <md-button class="zmdi zmdi-delete" ng-hide='showEdit' ng-click="vm.deletePost(p._id)"> Delete </md-button> -->
 
             <!-- Editting Form -->
       <form ng-show = 'showEdit' style="margin-top:70px;margin-bottom:100px;padding:30px;background-color:white;" ng-submit='vm.editPost(p._id, vm.editingPost); showEdit = false;'>
@@ -165,8 +153,4 @@
           <md-button type='submit' class='md-raised' > Edit </md-button>
           <md-button type='button' class='md-raised' ng-click = "showEdit = false;"> Cancel </md-button>
       </form>
-        <!-- </div>
-    </md-list-item>
-  </md-list>
-</md-container> -->
 </div>
