--- a/public/views/reglog.html
+++ b/public/views/reglog.html
@@ -22,15 +22,15 @@
         <div class="container">
           <ul class="social">
             <li class="facebook">
-              <a href="/api/auth/facebook" class="entypo-facebook"></a>
+              <a href="/api/auth/facebook" class="zmdi zmdi-facebook"></a>
             </li>
             <li class="twitter">
-              <a href="/api/auth/twitter" class="entypo-twitter"></a>
+              <a href="/api/auth/twitter" class="zmdi zmdi-twitter"></a>
             </li>
             <li class="login"><a ng-click="nav.login()" class=""> Login </a></li>
             <li class="register"><a ng-click="nav.isLogin = false;" class=""> Register</a></li>
             <li class="linked-in">
-              <a href="api/auth/linkedin" class="entypo-linkedin"></a>
+              <a href="api/auth/linkedin" class="zmdi zmdi-linkedin"></a>
             </li>
           </ul>
         </div>
