--- a/public/views/reglog.html
+++ b/public/views/reglog.html
@@ -30,7 +30,7 @@
             <li class="login"><a ng-click="nav.login()" class=""> Login </a></li>
             <li class="register"><a ng-click="nav.isLogin = false;" class=""> Register</a></li>
             <li class="linked-in">
-              <a href="api/auth/linkedin" class="zmdi zmdi-linkedin-box"></a>
+              <a href="api/auth/linkedin" class="zmdi zmdi-linkedin"></a>
             </li>
           </ul>
         </div>
