--- a/public/views/forum.html
+++ b/public/views/forum.html
@@ -13,7 +13,7 @@
         <div layout="column" ng-repeat="p in vm.topicPosts">
           <div style="padding-left:60px" class="md-list-item-text" style="padding:10px;">
             <h4 ui-sref="ForumPost({id: p._id})">{{p.title | firstLetterFilter}}</h4>
-            <h5>Posted by: {{p.createdBy.name | firstLetterFilter}} {{p.createdBy.lastName | firstLetterFilter}} on {{p.date | dateFilter}}</h5>
+            <h5>Posted by: <a ui-sref="Profile({id: p.creatorId})">{{p.createdBy.name  | firstLetterFilter}} {{p.createdBy.lastName | firstLetterFilter }}</a> on {{p.date | dateFilter}}</h5>
             <!-- <div layout>
               <md-button class="zmdi zmdi-edit" ui-sref="EditFPost({id: p._id})"> Edit</md-button>
               <md-button class="zmdi zmdi-delete" ng-click="vm.deleteFPost(p._id)"> Delete</md-button>
