--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -116,7 +116,7 @@
                   <div id="hover-content" flex="15">
                     <div layout="column">
                     <md-button class="zmdi zmdi-plus-circle-o small-btn" ng-click="vm.followOnProfile();" aria-label="follow"> </md-button>
-                    <md-button class="zmdi zmdi-minus-circle-outline small-btn" ng-click="vm.unfollowOnPost(p);" aria-label="unfollow"> </md-button>
+                    <md-button class="zmdi zmdi-minus-circle-outline small-btn" ng-click="vm.unfollowOnProfile();" aria-label="unfollow"> </md-button>
                     <md-button class="zmdi zmdi-email small-btn" ui-sref="Message({id: c.creatorId})"></md-button>
                   </div>
                   </div>
