added marging to profile posts

--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -84,7 +84,7 @@
                delete-hint="Press delete to remove tag"
                ></md-chips>
         </md-input-container>
-        <md-button type="submit" class="zmdi zmdi-mail-send" > Post </md-button>
+        <md-button style="margin-bottom:50px;" type="submit" class="zmdi zmdi-mail-send" > Post </md-button>
 </form>
 </div>
 </div>
@@ -93,7 +93,7 @@
 
             <!-- Post Display and edit -->
             <div ng-repeat='p in vm.profilePosts' >
-                <div layout>
+                <div style='margin-bottom:25px;' layout>
                   <div flex="15" id="parent">
                 <img src="{{p.avi}}" class="avatar" />
                 <div id="hover-content" flex="15">
