aligned home and profile views

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -54,7 +54,7 @@
           <md-button class="zmdi zmdi-email" ui-sref="Message({id: p.creatorId})"></md-button>
         </div>
       </div>
-      <div flex-offset="5">
+      <div>
         <div layout="column">
         <h2 >  {{p.title}} </h2>
         <img  ng-src="{{p.pic}}" class="post-pic"/>
