--- a/public/views/editfpost.html
+++ b/public/views/editfpost.html
@@ -23,8 +23,8 @@
             </md-select>
           </md-input-container>
             <div layout="row" style="padding-top:50px">
-            <md-button type="submit" class="md-raised"> Edit</md-button>
-            <md-button type="button" class="md-raised" ng-click="vm.cancelEdit();"> Cancel</md-button>
+            <md-button type="submit" class="md-flat"> Edit</md-button>
+            <md-button type="button" class="md-flat" ng-click="vm.cancelEdit();"> Cancel</md-button>
           </div>
     </form>
 
