--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -146,7 +146,7 @@
             <label> Content </label>
             <input type='text' ng-model='vm.editingPost.body'>
           </md-input-container>
-          <md-button type='submit' class='md-raised' > Edit </md-button>
-          <md-button type='button' class='md-raised' ng-click = "showEdit = false;"> Cancel </md-button>
+          <md-button type='submit' class='md-flat' > Edit </md-button>
+          <md-button type='button' class='md-flat' ng-click = "showEdit = false;"> Cancel </md-button>
       </form>
 </div>
