--- a/public/views/forumPost.html
+++ b/public/views/forumPost.html
@@ -4,7 +4,7 @@
 
 <h4>Body: {{vm.apost.body | firstLetterFilter}}</h4>
 
-<h5>Posted by: <a ui-sref="Profile({id: p.creatorId})">{{p.createdBy.name  | firstLetterFilter}} {{p.createdBy.lastName | firstLetterFilter }}</a> on {{p.date | dateFilter}}</h5
+<h5>Posted by: <a ui-sref="Profile({id: p.creatorId})">{{p.createdBy.name  | firstLetterFilter}} {{p.createdBy.lastName | firstLetterFilter }}</a> on {{p.date | dateFilter}}</h5>
 <!-- <div layout> -->
 <md-button class="zmdi zmdi-thumb-down" ng-click="vm.downvote(vm.apost)" aria-label="down"> </md-button>
 <md-button class="zmdi zmdi-thumb-up" ng-click="vm.upvote(vm.apost)" aria-label="up"> </md-button>
